02/25/2013
	Added in the ability to load multiple objects
	Implemented Move / Rotate / Scale
	implemented Slicing of entire scene
	GUI changes / fixes

02/22/2013 Alpha 03 release
	Added GCode Load/Save functionality
	Added Pixel offset to generated slices
	Added Lift control with pre and post-lift gcode
	Added blank screen with additional blank delay
	Added a direction flag to control top-down or bottom-up machines

02/22/2013 Initial Alpha 02 release
	Added in Raw GCode display to send GCodes
	Fixed Build Issue
	Added in First Layer exposure time
	Added in Z Feed rate in Machine Configuration
	Temporarily changed GCode generation to use relative movements
	Removed front-page connection serial port. Connection config is now done through connection screen.

02/21/2013 Initial Alpha 01 release